--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </header>
 
   <section class="products">
-    <h2>Our Menu</h2>
+    <h2>Our Menu  　　練習用のプロトタイプです</h2>
     <ul>
 
       <li>
@@ -64,7 +64,7 @@
   </section>
 
   <footer>
-    <small>Ⓒ dotinstall.com</small>
+    <small>Ⓒ GOLAZO 02.com</small>
   </footer>
 
   </div>
