--- a/paella01.html
+++ b/paella01.html
@@ -37,7 +37,7 @@
     </section>
 
     <footer>
-      <small>Ⓒ dotinstall.com</small>
+      <small>Ⓒ GOLAZO 02.com</small>
     </footer>
 
   </div>
